fix(mds-tab): prevent slider wrong positioning when fill is enabled

--- a/projects/stencil/src/components/mds-tab/css/mds-tab-animation.css
+++ b/projects/stencil/src/components/mds-tab/css/mds-tab-animation.css
@@ -24,6 +24,10 @@
   z-index: 0;
 }
 
+.slider--no-trantitions {
+  transition-property: none;
+}
+
 ::slotted( mds-tab-item ) {
   position: relative;
   z-index: 1;
